-Console (GUI and CLI) can now read Minecraft chat color codes. This is toggle-able.
-Default main level size for first startups is now 128/128/128.
-For custom commands and plugins, usage of &g/%g color code is encouraged, instead of the old Server.DefaultColor.
-Added colors for IRC to Minecraft (and vice versa).
-Fixed various IRCBot and GlobalChatBot bugs.
-Fixed various Console GUI bugs.

MCDawn 1.0.1.9
-Updated Commands
	-/rules - Works as intended from Console.
	-/oprules - Works as intended from Console.
	-/kick - Modified kick messages.
	-/undo - Doesn't cause game crashes when used on players with long usernames anymore.
-New Commands
	-/like - "Like" a level.
	-/unlike - Undoes your like.
	-/viewlikes - Views how many likes have been given to a level.

MCDawn 1.0.1.7/8
-Critical update: Fixed bug with Name column in database.

MCDawn 1.0.1.6
-Updated Commands
	-/players - Will show users in IRC channels if IRC is enabled.
	-/irc - Will correctly show users in IRC channels.
	-/hsave - Works as intended.
-New Commands
	-/dome <radius> <block> [hollow/solid] - Creates a dome around you.
	-/cone <radius> <vertical expansion> <block> [hollow/solid] - Creates a cone around and above you.
	-/pyramid <radius> <vertical expansion> <block> [hollow/solid] - Creates a pyramid around and above you.
-MCDawn Server List re-coded to fix several bugs.
-WOM Server List heartbeat URL updated to https://direct.worldofminecraft.com/server.php.
-Added support for email usernames.
	
MCDawn 1.0.1.5
-Added !url IRC command (Type !url in the channel of the IRC bot and the server will say the URL of the server).
-ProfanityFilter fixed to work properly, and not throw OutOfMemoryExceptions.
-Anti-Caps and Anti-Spam features fixed to work properly now.
-Fixed small Admin Security System bug.
-If GeoIP is enabled, players connecting from local IP addresses (same network/machine) now have their countries shown as "Localhost (CountryName)" instead of "N/A".
-Updated Commands